# music-album-creator

./: .bandit.yml  .coveragerc  .gitignore  .pylintrc  .scrutinizer.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  README.rst  album_segmentation.py  appveyor.yml  create-album.py  display-logo.sh  downloading.py  metadata.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  tracks_parsing.py
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  issue-inquiry.md
.github/workflows/: cicd.yaml  test.yaml
.travis/: deploy.sh  install-tox.sh  run-tox.sh
ci/: appveyor-bootstrap.py  appveyor-download.py
docs/: conf.py  installation.rst  usage.rst
docs/reference/: index.rst  music_album_creation.rst
format_classification/: __init__.py  dataset.py
format_classification/data/: model.pickle  test-split.txt  train-split.txt
frontend/: editor.py  metadata_dialogs.py  pizza.py
ml_ops/: model_5_12_2022_800_datapoints.ipynb  model_with_loaded_datapoints.ipynb
music_album_creation/: album_segmentation.py  create_album.py  dialogs.py  downloading.py  metadata.py  tracks_parsing.py
music_album_creation/format_classification/: __init__.py  dataset.py  dev-split.txt  test-split.txt  tracks_format_classifier.py  train-split.txt
music_album_creation/format_classification/data/: model1
src/music_album_creation/: __init__.py  __main__.py  _logging.py  album_segmentation.py  create_album.py  dialogs.py  downloading.py  ffmpeg.py  ffmpeg_proxy.py  ffmpeg_subject.py  ffprobe_client.py  logging.ini  metadata.py  music_master.py  tracks_parsing.py  web_parsing.py
src/music_album_creation/audio_segmentation/: __init__.py  album_segmentation.py  data.py
src/music_album_creation/ffmpeg/: __init__.py  run_cli.py
src/music_album_creation/ffmpeg/ffmpeg/: __init__.py  ffmpeg.py  ffmpeg_proxy.py  ffmpeg_subject.py
src/music_album_creation/ffmpeg/ffprobe/: __init__.py  ffprobe.py  ffprobe_proxy.py  ffprobe_subject.py
src/music_album_creation/format_classification/: __init__.py  dataset.py  tracks_format_classifier.py
src/music_album_creation/format_classification/data/: dev-split.txt  model.pickle  py27_model.pickle
testing/: test_classifier.py  test_downloading.py  test_segmenting.py  test_splitters.py
tests/: conftest.py  test_classifier.py  test_create_album_program.py  test_downloading.py  test_input.py  test_metadata.py  test_parsing_track.py  test_segmenting.py  test_segmenting_preserves_stream_properties.py  test_splitters.py  test_youtube_title.py
tests/downloading/: test_cli_downloading.py  test_downloading.py
