[metadata]
description-file = README.rst
license_file = LICENSE.txt

[flake8]
max-line-length = 140
exclude = */migrations/*

[tool:pytest]
testpaths = tests
norecursedirs = 
	migrations
python_files = 
	test_*.py
	*_test.py
	tests.py
addopts = 
	-ra
	--strict
	--doctest-modules
	--doctest-glob=\*.rst
python_versions = 
	py35
	py36
	py37
dependencies = 
environment_variables = 
	-

[easy_install]

