[metadata]
description-file = README.rst
license_file = LICENSE.txt

[flake8]
max-line-length = 140
exclude = */migrations/*

[tool:pytest]
testpaths = tests
norecursedirs = 
	migrations
python_files = 
	test_*.py
	*_test.py
	tests.py
addopts = 
	-ra
	--strict
	--doctest-modules
	--doctest-glob=\*.rst
python_versions = 
	py35
	py36
	py37
dependencies = 
environment_variables = 
	-

[easy_install]


[semantic_release]
version_variable = src/music_album_creation/__init__.py:__version__
version_source = tag
hvcs = github
upload_to_pypi=false
